--- a/resources/assets/styles/variables/_grid-config.scss
+++ b/resources/assets/styles/variables/_grid-config.scss
@@ -27,10 +27,10 @@ $av-widths: (
 
 $av-enable-responsive:  true !default;
 $av-breakpoints:  (
-  "thumb":            "screen and (max-width: 499px)",
+  "phone":            "screen and (max-width: 499px)",
   "handheld":         "screen and (min-width: 500px) and (max-width: 800px)",
   "handheld-and-up":  "screen and (min-width: 500px)",
-  "pocket":           "screen and (max-width: 800px)",
+  "tablet":           "screen and (max-width: 800px)",
   "lap":              "screen and (min-width: 801px) and (max-width: 1024px)",
   "lap-and-up":       "screen and (min-width: 801px)",
   "portable":         "screen and (max-width: 1024px)",
