--- a/resources/assets/styles/common/_mixin.scss
+++ b/resources/assets/styles/common/_mixin.scss
@@ -3,11 +3,6 @@
     #{$prefix}#{$property}: $value;
   }
 }
-@function get_vw($size, $viewport: 768) {
-  $rate: 100 / $viewport;
-
-  @return $rate * $size * 1.3vw;
-}
 @mixin font-size($font_size: 10) {
   font-size: $font_size * 1px;
   font-size: get_vw($font_size);
@@ -26,13 +21,8 @@
 
   @include background-image(linear-gradient(darken($color, $darken) 0%, $color 100%));
 }
-@mixin box_shadow($top, $left, $blur, $color, $inset: "") {
-  -webkit-box-shadow: $top $left $blur $color #{$inset};
-  -moz-box-shadow: $top $left $blur $color #{$inset};
-  box-shadow: $top $left $blur $color #{$inset};
-}
-@mixin query($size) {
-  @media all and (max-width: $size + px) {
+@mixin query($breakpoint: tablet) {
+  @media #{map-get($av-breakpoints, $breakpoint)} {
     @content;
   }
 }
