--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -8,7 +8,7 @@
   font-size: 20px;
   font-weight: bold;
 
-  @include query(900) {
+  @include query(tablet) {
     margin: 2vw;
     font-size: 13px;
     line-height: 1.5;
