--- a/resources/assets/styles/components/_logo.scss
+++ b/resources/assets/styles/components/_logo.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
 
-  @include query(900) {
+  @include query(tablet) {
     padding: 10px;
   }
 
