--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -19,6 +19,7 @@
 // common setting
 @import "common/mixin";
 @import "common/global";
+@import "common/grid";
 @import "common/color";
 
 /** layouts */
