--- a/resources/assets/styles/variables/_grid-config.scss
+++ b/resources/assets/styles/variables/_grid-config.scss
@@ -33,7 +33,7 @@ $av-breakpoints:  (
   "tablet":           "screen and (max-width: 800px)",
   "lap":              "screen and (min-width: 801px) and (max-width: 1024px)",
   "lap-and-up":       "screen and (min-width: 801px)",
-  "portable":         "screen and (max-width: 1024px)",
+  "desktop":         "screen and (max-width: 1024px)",
   "desk":             "screen and (min-width: 1025px)",
   "widescreen":       "screen and (min-width: 1160px)",
   "retina":           "screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx)"
