--- a/resources/assets/styles/common/_grid.scss
+++ b/resources/assets/styles/common/_grid.scss
@@ -242,7 +242,7 @@
 }
 
 // desktop order
-@for $i from 1 through $grid-max-columns {
+@for $i from 1 through 12 {
   .grid__cell--order-#{$i} {
     order: $i;
   }
@@ -250,7 +250,7 @@
 
 // tablet order
 @include query(tablet) {
-  @for $i from 1 through $grid-max-columns {
+  @for $i from 1 through 12 {
     .grid__cell--order-#{$i}-tablet.cell--order-#{$i}-tablet {
       order: $i;
     }
@@ -259,7 +259,7 @@
 
 // phone order
 @include query(phone) {
-  @for $i from 1 through $grid-max-columns {
+  @for $i from 1 through 12 {
     .grid__cell--order-#{$i}-phone.cell--order-#{$i}-pnone {
       order: $i;
     }
@@ -267,7 +267,7 @@
 }
 
 // desktop hide
-.gird__cell--hide {
+.#{$av-namespace}__cell--hide {
   display: none !important;
 }
 
@@ -280,7 +280,7 @@
 
 // phone hider
 @include query(phone) {
-  .gird__cell--hide-phone {
+  .#{$av-namespace}__cell--hide-phone {
     display: none !important;
   }
 }
