--- a/resources/assets/styles/variables/_font-config.scss
+++ b/resources/assets/styles/variables/_font-config.scss
@@ -57,5 +57,5 @@
 }
 @import url("//fonts.googleapis.com/css?family=Lora:700i");
 
-$font__primary: "Noto Sans Japanese", "游ゴシック", YuGothic, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+$font__primary: "Avenir Mimo",Avenir,"Noto Sans Japanese","游ゴシック",YuGothic,"ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic ProN","メイリオ", Meiryo, sans-serif;
 $font__accent: "Lora", serif;
