--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -44,6 +44,7 @@
 @import "components/privacy";
 @import "components/scroll-x";
 @import "components/tel";
+@import "components/text-box";
 @import "components/text";
 @import "components/title";
 
