--- a/resources/assets/styles/variables/_grid-config.scss
+++ b/resources/assets/styles/variables/_grid-config.scss
@@ -12,6 +12,7 @@ $av-gutter:                 10px !default;        // Gutter between grid cells
 $av-width-class-namespace:  '' !default;          // Prefix namespace for width classes. For example; 'col-'
 $av-width-class-style:      'fraction' !default;  // Width class naming style. Can be 'fraction', 'percentage' or 'fragment'
 $av-widths: (
+  1,
   2,
   3,
   4,
