--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -67,12 +67,12 @@ p {
 
 main {
   max-width: 100%;
-  min-height: 100vh;
+  min-height: 85vh;
   margin: 0 auto;
 }
 
 footer {
-  border-top: 5px solid unquote("rgba(#{$color-primary-dark}, 1)");
+  border-bottom: 5px solid unquote("rgba(#{$color-primary-dark}, 1)");
 }
 
 ul {
