--- a/resources/assets/styles/components/_logo.scss
+++ b/resources/assets/styles/components/_logo.scss
@@ -1,6 +1,7 @@
 .logo {
   height: 100px;
-  font-size: 20vw;
+  font-size: 22px;
+  font-weight: bold;
   letter-spacing: 5px;
   @include vender(display, flex);
   justify-content: center;
@@ -9,7 +10,6 @@
   z-index: 100;
 
   @include query(tablet) {
-    font-size: 22px;
     padding: 10px;
   }
 
