--- a/resources/assets/styles/components/_contact.scss
+++ b/resources/assets/styles/components/_contact.scss
@@ -10,4 +10,14 @@
   position: fixed;
   right: 0;
   bottom: 0;
+  cursor: pointer;
+
+  @include query(tablet) {
+    width: inherit;
+    height: inherit;
+    padding: 10px;
+    position: static;
+    background: unquote("rgba(#{$color-black}, 1)");
+    @include vender(align-items, center);
+  }
 }
