--- a/resources/assets/styles/components/_copyright.scss
+++ b/resources/assets/styles/components/_copyright.scss
@@ -1,6 +1,14 @@
 .copyright {
   @include vender(transform, rotate(90deg));
   position: fixed;
-  left: -200px;
-  bottom: 190px;
+  left: -35vh;
+  top: 50vh;
+  font-size: 3vh;
+
+  @include query(tablet) {
+    padding: 10px;
+    font-size: 11px;
+    @include vender(transform, rotate(0deg));
+    position: static;
+  }
 }
