--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -40,6 +40,7 @@
 @import "components/comments";
 @import "components/faq";
 @import "components/forms";
+@import "components/icon";
 @import "components/inner";
 @import "components/logo";
 @import "components/main-visual";
@@ -51,6 +52,7 @@
 @import "components/text-box";
 @import "components/text";
 @import "components/title";
+@import "components/wrapper";
 
 /** js */
 @import "js/hiraku";
