--- a/resources/assets/styles/components/_contact.scss
+++ b/resources/assets/styles/components/_contact.scss
@@ -1,12 +1,13 @@
 .contact {
   width: 100px;
   height: 100px;
+  padding-right: 5px;
   background: linear-gradient(to bottom right, unquote("rgba(#{$color-black}, 0)") 50%, unquote("rgba(#{$color-black}, 1)") 50.5%) no-repeat top left/100% 100%;
   color: unquote("rgba(#{$color-white}, 1)");
-  font-size: 10px;
+  font-size: 14px;
   @include vender(display, flex);
   @include vender(align-items, flex-end);
-  justify-content: center;
+  justify-content: flex-end;
   position: fixed;
   right: 0;
   bottom: 0;
