--- a/resources/assets/styles/components/_inner.scss
+++ b/resources/assets/styles/components/_inner.scss
@@ -1,7 +1,12 @@
 .inner {
   width: 1100px;
-  max-width: 100%;
+  max-width: 80%;
   margin: 0 auto;
+
+  @include query(tablet) {
+    max-width: 100%;
+    padding: 0 2vw;
+  }
 
   &--space {
     padding: 50px 0;
