--- a/resources/assets/styles/components/_faq.scss
+++ b/resources/assets/styles/components/_faq.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
     color: unquote("rgba(#{$color-primary-dark}, 1)");
-    font-size: 20px;
+    font-size: 1.5rem;
     border-bottom: 1px solid unquote("rgba(#{$color-black}, .1)");
     cursor: pointer;
   }
