--- a/resources/assets/styles/components/_logo.scss
+++ b/resources/assets/styles/components/_logo.scss
@@ -1,6 +1,6 @@
 .logo {
   height: 100px;
-  font-size: 22px;
+  font-size: 2.5rem;
   font-weight: bold;
   letter-spacing: 5px;
   @include vender(display, flex);
