contact form レイアウト修正

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -62,6 +62,7 @@
 @import "js/dropdown";
 
 // wordpressbem例外対応
+@import "wordpress/contact-form-7";
 @import "wordpress/wp-classes";
 @import "wordpress/js-dropdown";
 
