エラー対応

--- a/resources/assets/styles/wordpress/_contact-form-7.scss
+++ b/resources/assets/styles/wordpress/_contact-form-7.scss
@@ -20,7 +20,7 @@
   .wpcf7-mail-sent-ok {
     color: unquote("rgba(#{$color-white}, 1)");
     border: none;
-    background-color: unquote("rgba(#{$color-black}, 1)")
+    background-color: unquote("rgba(#{$color-black}, 1)");
   }
 
   /* 必須赤色表示 */
